--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -75,5 +75,22 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:text="Fearing the actions of a god-like Super Hero left unchecked, Gotham City’s own formidable, forceful vigilante takes on Metropolis’s most revered, modern-day savior, while the world wrestles with what sort of hero it really needs. And with Batman and Superman at war with one another, a new threat quickly arises, putting mankind in greater danger than it’s ever known before."/>
+
+        <TextView
+            android:paddingBottom="48dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:textAllCaps="true"
+            android:text="@string/reviews"/>
+
+        <TextView
+            android:paddingBottom="48dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:text="Know your enemy's weakness before challenging to a fight!\r\n\r\nIt is known that critics have no brain. It is the best Superman film as Henry Cavill in the red and blue suit. Yep, I know it is always DC versus Marvel, so it is then DC's reply to the 'Avengers'. I don't care their rivalries, as a film fanatic, I enjoy good films and I found it was so good. "/>
     </LinearLayout>
 </ScrollView>
