--- a/app/src/main/res/layout-sw600dp/fragment_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_detail.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MovieDetailActivity"
+    tools:context=".DetailActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
