feat: Update MovieParser to specify number of reviews.
Update MovieParser to specify number of reviews.  Update DetailFragment to use new Parser method.  Add an id to the review View.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -86,6 +86,7 @@
             android:text="@string/reviews"/>
 
         <TextView
+            android:id="@+id/reviewTextView"
             android:paddingBottom="48dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
