snapshot: Add a RecyclerView of Movie reviews.
Currently the RecyclerView doesn’t work in landscape because it’s not in the ScrollView.  Will change the RV for a list of reviews.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,97 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".DetailActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".DetailActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/movieTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/darker_gray"
-            android:gravity="center"
-            android:minHeight="48dp"
-            android:textColor="@android:color/white"
-            android:textSize="36sp"
-            tools:text="The Young and the Bestless"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="138.755dp"
-                android:layout_height="201dp"
-                android:padding="8dp"
-                tools:src="@drawable/placeholder"/>
+            <TextView
+                android:id="@+id/movieTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/darker_gray"
+                android:gravity="center"
+                android:minHeight="48dp"
+                android:textColor="@android:color/white"
+                android:textSize="36sp"
+                tools:text="The Young and the Bestless"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="12dp"
-                android:weightSum="1">
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/dateTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    tools:text="2016"/>
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="138.755dp"
+                    android:layout_height="201dp"
+                    android:padding="8dp"
+                    tools:src="@drawable/placeholder"/>
 
-                <TextView
-                    android:id="@+id/lengthTextView"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    tools:text="186 min"/>
+                    android:orientation="vertical"
+                    android:padding="12dp"
+                    android:weightSum="1">
 
-                <TextView
-                    android:id="@+id/voteAverageTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:isIndicator="true"
-                    tools:text="9.25/10"/>
+                    <TextView
+                        android:id="@+id/dateTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        tools:text="2016"/>
+
+                    <TextView
+                        android:id="@+id/lengthTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        tools:text="186 min"/>
+
+                    <TextView
+                        android:id="@+id/voteAverageTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:isIndicator="true"
+                        tools:text="9.25/10"/>
+                </LinearLayout>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/synopsisTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:paddingBottom="24dp"
+                android:text="Fearing the actions of a god-like Super Hero left unchecked, Gotham City’s own formidable, forceful vigilante takes on Metropolis’s most revered, modern-day savior, while the world wrestles with what sort of hero it really needs. And with Batman and Superman at war with one another, a new threat quickly arises, putting mankind in greater danger than it’s ever known before."/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:paddingBottom="24dp"
+                android:text="@string/reviews"
+                android:textAllCaps="true"/>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/synopsisTextView"
-            android:paddingBottom="48dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:text="Fearing the actions of a god-like Super Hero left unchecked, Gotham City’s own formidable, forceful vigilante takes on Metropolis’s most revered, modern-day savior, while the world wrestles with what sort of hero it really needs. And with Batman and Superman at war with one another, a new threat quickly arises, putting mankind in greater danger than it’s ever known before."/>
+    </ScrollView>
 
-        <TextView
-            android:paddingBottom="48dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:textAllCaps="true"
-            android:text="@string/reviews"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/reviewRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="64dp"/>
 
-        <TextView
-            android:id="@+id/reviewTextView"
-            android:paddingBottom="48dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:text="Know your enemy's weakness before challenging to a fight!\r\n\r\nIt is known that critics have no brain. It is the best Superman film as Henry Cavill in the red and blue suit. Yep, I know it is always DC versus Marvel, so it is then DC's reply to the 'Avengers'. I don't care their rivalries, as a film fanatic, I enjoy good films and I found it was so good. "/>
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
