feat: Get higher resolution image from Youtube
Now using 480x360 to maximize available area.

--- a/app/src/main/res/layout/fragment_detail_denested.xml
+++ b/app/src/main/res/layout/fragment_detail_denested.xml
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/synopsisTextView"
             android:layout_gravity="center"
-            android:src="@drawable/placeholder"/>
+            tools:src="@drawable/thumbnail480x360"/>
 
         <TextView
             android:id="@+id/reviewHeaderTextView"
