--- a/app/src/main/res/layout/fragment_detail_denested.xml
+++ b/app/src/main/res/layout/fragment_detail_denested.xml
@@ -75,10 +75,26 @@
             tools:text="Fearing the actions of a god-like Super Hero left unchecked, Gotham City’s own formidable, forceful vigilante takes on Metropolis’s most revered, modern-day savior, while the world wrestles with what sort of hero it really..."/>
 
         <ImageView
-            android:id="@+id/poster_1"
+            android:id="@+id/trailerThumbnail_0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/synopsisTextView"
+            android:layout_gravity="center"
+            tools:src="@drawable/thumbnail480x360"/>
+
+        <ImageView
+            android:id="@+id/trailerThumbnail_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trailerThumbnail_0"
+            android:layout_gravity="center"
+            tools:src="@drawable/thumbnail480x360"/>
+
+        <ImageView
+            android:id="@+id/trailerThumbnail_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trailerThumbnail_1"
             android:layout_gravity="center"
             tools:src="@drawable/thumbnail480x360"/>
 
@@ -86,7 +102,7 @@
             android:id="@+id/reviewHeaderTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/poster_1"
+            android:layout_below="@id/trailerThumbnail_2"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:paddingBottom="24dp"
