refactor: Rename placeholder.jpg to poster_placeholder.jpg
To avoid ambiguity.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:padding="8dp"
-            tools:src="@drawable/placeholder"/>
+            tools:src="@drawable/poster_placeholder"/>
 
         <TextView
             android:id="@+id/dateTextView"
