--- a/app/src/main/res/layout/fragment_master.xml
+++ b/app/src/main/res/layout/fragment_master.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gridview"
+    android:id="@+id/posterRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:numColumns="2"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
     tools:context="com.ruthiefloats.popularmoviesstage2.MainActivity">
-</GridView>
+</android.support.v7.widget.RecyclerView>
