--- a/app/src/main/res/layout/item_poster.xml
+++ b/app/src/main/res/layout/item_poster.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-    android:id="@+id/master_poster">
-
+    android:id="@+id/master_poster"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 </ImageView>
