--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -7,14 +7,15 @@
 
     <FrameLayout
         android:id="@+id/master_container"
-        android:layout_width="0dp"
-        android:layout_weight="2"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_weight="3"
         android:layout_height="match_parent">
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/detail_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_weight="4"
         android:layout_height="match_parent">
     </FrameLayout>
